# TectleAUTO

./: .gitignore  README.md  pyproject.toml
tectle/: __init__.py
tectle/orders/: __init__.py  models.py  organizer.py  service.py
tectle/orders/importers/: __init__.py  base.py  etsy.py  shopify.py
tectle/ui/: __init__.py  __main__.py  sample_data.py  server.py
tests/: test_dashboard.py  test_service.py
