[project]
name = "tectle"
version = "0.1.0"
description = "Order intake and organization toolkit for Tectle"
authors = [{name = "Tectle"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
tectle-dashboard = "tectle.ui.server:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
